--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,43 @@ body {
     overflow: hidden;
 }
 
+.start {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.start h1 {
+    position: absolute;
+    top: 0;
+    padding: 5vmin;
+}
+
+.categories {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1vmin;
+}
+
+.categories button {
+    min-width: 10rem;
+    padding: 2rem;
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+    font-size: 1.5rem;
+}
+
+.categories button:hover {
+    background-color: #ff3;
+    color: black;
+}
 
 .quiz {
     display: flex;
@@ -55,6 +92,7 @@ body {
 .question {
     font-weight: 500;
     margin: 2vmin;
+    text-align: center;
 }
 
 .choices {
@@ -70,11 +108,16 @@ body {
     margin: 5vmin;
     transform: scale(1.1);
     display: flex;
+    align-items: center;
     padding: 1rem;
     background-color: transparent;
     color: white;
     border: 1px solid white;
     font-weight: bold;
+    text-align: center;
+    justify-content: center;
+    min-width: 10%;
+    max-width: 22%;
 }
 
 .choice:hover, .correct  {
