--- a/src/App.css
+++ b/src/App.css
@@ -51,11 +51,12 @@ body {
     justify-content: center;
     align-items: center;
     gap: 1vmin;
+    width: 80%;
 }
 
 .categories button {
-    min-width: 10rem;
-    padding: 2rem;
+    min-width: 10vmin;
+    padding: 2vmin;
     background-color: transparent;
     color: white;
     border: 1px solid white;
@@ -109,7 +110,7 @@ body {
     transform: scale(1.1);
     display: flex;
     align-items: center;
-    padding: 1rem;
+    padding: 1vmin;
     background-color: transparent;
     color: white;
     border: 1px solid white;
@@ -127,4 +128,22 @@ body {
 
 .mistaken {
     background-color: firebrick;
+}
+
+.results a {
+    color: white;
+}
+
+@media only screen and (max-height: 411px) {
+    body {
+        font-size: 12px;
+    }
+
+    .categories {
+        padding-top: 10vmin;
+    }
+
+    .categories button {
+        padding: 1.5vmin;
+    }
 }
