--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,7 @@ body {
     justify-content: center;
     min-width: 10%;
     max-width: 22%;
+    font-size: 0.6rem;
 }
 
 .choice:hover, .correct  {
