--- a/src/App.css
+++ b/src/App.css
@@ -148,3 +148,13 @@ body {
         padding: 1.5vmin;
     }
 }
+
+@media only screen and (min-height: 412px) {
+    body, button {
+        font-size: 16px;
+    }
+
+    .choices button {
+        padding: 3vmin;
+    }
+}
